fixed errors with yaml
