# swagger.json
@@ -26,6 +26,58 @@
             "description": "Unable to retrieve books"
           }
         }
+      },
+      "post": {
+        "summary": "Create a book",
+        "tags": [
+          "Books"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id",
+                  "authorId",
+                  "title",
+                  "publicationDate"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "string"
+                  },
+                  "title": {
+                    "type": "string"
+                  },
+                  "authorId": {
+                    "type": "string"
+                  },
+                  "publicationDate": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "id": "a4",
+                "title": "Example Book",
+                "publicationDate": "1980-01-01"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Book created"
+          },
+          "400": {
+            "description": "Missing required book fields or author ID doesn't exist, or bookid already exists"
+          },
+          "500": {
+            "description": "Unable to create book"
+          }
+        }
       }
     },
     "/books/{id}": {
@@ -54,6 +106,96 @@
           },
           "500": {
             "description": "Unable to retrieve book"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update a book by ID",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The book ID."
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "title",
+                  "authorId",
+                  "publicationDate"
+                ],
+                "properties": {
+                  "title": {
+                    "type": "string"
+                  },
+                  "authorId": {
+                    "type": "string"
+                  },
+                  "publicationDate": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "title": "Updated Book",
+                "authorId": "a4",
+                "publicationDate": "1981-01-01"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Author updated"
+          },
+          "400": {
+            "description": "Missing required book fields or author ID doesn't exist"
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Unable to update author"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a book by ID",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The book ID."
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Book deleted"
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Unable to delete book"
           }
         }
       }
